--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ idna==3.3
 mypy-extensions==0.4.3
 oauthlib==3.2.0
 pathspec==0.9.0
+Pillow==9.0.1
 platformdirs==2.5.1
 pycparser==2.21
 PyJWT==2.3.0
@@ -22,6 +23,7 @@ pytz==2021.3
 requests==2.27.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
+stripe==2.67.0
 tomli==2.0.1
 typing_extensions==4.1.1
 urllib3==1.26.9
